[package]
name = "routerify-query"
version = "3.0.0"
description = "A Routerify middleware which parses the request query string."
homepage = "https://github.com/routerify/routerify-query"
repository = "https://github.com/routerify/routerify-query"
keywords = ["routerify", "hyper-rs", "hyper", "middleware", "querystring"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
routerify = "3"
hyper = "0.14"
url = "2.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }